freest/test/prog/Invalid/Kinding/LacksKindSig/LacksKindSig.fst
module LacksKindSig where

type Foo = Int
